saving this before i try to fix the profile form for staff users

--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
@@ -37,8 +37,8 @@
     <h4>Gender:</h4>
     <p>@Model.Gender</p>
 
-    <h4>Relationship Status:</h4>
-    <p>@Model.RelationshipStatus</p>
+    <h4>Tax Category:</h4>
+    <p>@Model.TaxCategory</p>
 </div>
 <div class="form-group">
     <a asp-action="Salary" asp-route-id="@Model.UserProfileId" class="btn btn-primary">View Salary Breakdown</a>
