--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Index.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <form asp-action="Index" method="post">
-    <input type="hidden" asp-for="UserId" value="@ViewBag.UserId" />
+    <input type="hidden" asp-for="UserId" />
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
