--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Salary.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Salary.cshtml
@@ -64,4 +64,8 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
     </div>
+
+    <div class="form-group">
+        <button type="button" class="btn btn-secondary" onclick="window.history.back();">Back</button>
+    </div>
 </form>
