--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
@@ -13,6 +13,23 @@
         <input asp-for="YearlySalary" class="form-control" />
         <span asp-validation-for="YearlySalary" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="Position"></label>
+        <input asp-for="Position" class="form-control" />
+        <span asp-validation-for="Position" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="StartDate"></label>
+        <input asp-for="StartDate" class="form-control" />
+        <span asp-validation-for="StartDate" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="EmployerPensionContributionPercentage"></label>
+        <input asp-for="EmployerPensionContributionPercentage" class="form-control" />
+        <span asp-validation-for="EmployerPensionContributionPercentage" class="text-danger"></span>
+    </div>
 
     <input type="hidden" asp-for="UserProfileId" />
 
