Tax and pension calculation complete

--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
@@ -46,7 +46,7 @@
     }
 </div>
 <div class="form-group">
-    <a asp-action="Salary" asp-route-id="@Model.UserProfileId" class="btn btn-primary">View Salary Breakdown</a>
+    <a asp-action="Salary" asp-route-userProfileId="@Model.UserProfileId" class="btn btn-primary">View Salary Breakdown</a>
 </div>
 
 <div>
