--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EditSalaryViewModel
 @{
-    ViewData["Title"] = "Edit Salary";
+    ViewData["Title"] = "Edit Salary"; //for admin
 }
 
 <h2>@ViewData["Title"]</h2>
