--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Contract.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Contract.cshtml
@@ -54,5 +54,11 @@
             Employer Pension Contribution: @($"{Model.EmployerPensionContributionPercentage:F2}%")
         </p>
     </div>
-
+    <div class="section">
+        <div class="section-title">3. Leave Days</div>
+        <p>
+            Annual Leave Days: <span class="variable">@Model.AnnualLeaveDays</span><br>
+            Sick Leave Days: <span class="variable">@Model.SickLeaveDays</span>
+        </p>
+    </div>
 </div>
