--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/EditSalary.cshtml
@@ -30,6 +30,17 @@
         <input asp-for="EmployerPensionContributionPercentage" class="form-control" />
         <span asp-validation-for="EmployerPensionContributionPercentage" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="AnnualLeaveDays"></label>
+        <input asp-for="AnnualLeaveDays" class="form-control" />
+        <span asp-validation-for="AnnualLeaveDays" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="SickLeaveDays"></label>
+        <input asp-for="SickLeaveDays" class="form-control" />
+        <span asp-validation-for="SickLeaveDays" class="text-danger"></span>
+    </div>
 
     <input type="hidden" asp-for="UserProfileId" />
 
