--- a/ATUProject1/EmployeeManagementSystem/Views/Home/_ApplyForLeave.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Home/_ApplyForLeave.cshtml
@@ -2,8 +2,8 @@
 
 <h2>Apply for Leave</h2>
 
-<form asp-action="_ApplyForLeave" asp-controller="Profile" method="post" enctype="multipart/form-data">
-    <div asp-validation-summary="All" class="text-danger"></div>
+<form asp-controller="Profile" asp-action="ApplyForLeave" method="post" enctype="multipart/form-data">
+<div asp-validation-summary="All" class="text-danger"></div>
     <input type="hidden" asp-for="UserProfileId" />
 
     <div class="form-group">
@@ -27,11 +27,15 @@
         <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="DoctorNote"></label>
-        <input asp-for="DoctorNote" type="file" class="form-control-file" />
-        <span asp-validation-for="DoctorNote" class="text-danger"></span>
-    </div>
+    @if (Model.LeaveType != "Annual")
+    {
+        <div class="form-group">
+            <label asp-for="DoctorNote"></label>
+            <input asp-for="DoctorNote" type="file" class="form-control-file" />
+            <span asp-validation-for="DoctorNote" class="text-danger"></span>
+        </div>
+    }
 
     <button type="submit" class="btn btn-primary">Apply</button>
 </form>
+
