--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Details.cshtml
@@ -4,52 +4,63 @@
     ViewData["Title"] = "Profile Details";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h1 class="text-center">@ViewData["Title"]</h1>
 
-<div>
-    <h4>First Name:</h4>
-    <p>@Model.FirstName</p>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h4>First Name:</h4>
+                    <p>@Model.FirstName</p>
 
-    <h4>Last Name:</h4>
-    <p>@Model.LastName</p>
+                    <h4>Last Name:</h4>
+                    <p>@Model.LastName</p>
 
-    <h4>Address Line 1:</h4>
-    <p>@Model.AddressLine1</p>
+                    <h4>Address Line 1:</h4>
+                    <p>@Model.AddressLine1</p>
 
-    <h4>Address Line 2:</h4>
-    <p>@Model.AddressLine2</p>
+                    <h4>Address Line 2:</h4>
+                    <p>@Model.AddressLine2</p>
 
-    <h4>County:</h4>
-    <p>@Model.County</p>
+                    <h4>County:</h4>
+                    <p>@Model.County</p>
 
-    <h4>Eircode:</h4>
-    <p>@Model.Eircode</p>
+                    <h4>Eircode:</h4>
+                    <p>@Model.Eircode</p>
 
-    <h4>Phone Number:</h4>
-    <p>@Model.PhoneNumber</p>
+                    <h4>Phone Number:</h4>
+                    <p>@Model.PhoneNumber</p>
 
-    <h4>PPSN:</h4>
-    <p>@Model.PPSN</p>
+                    <h4>PPSN:</h4>
+                    <p>@Model.PPSN</p>
 
-    <h4>Date of Birth:</h4>
-    <p>@Model.DateOfBirth.ToShortDateString()</p>
+                    <h4>Date of Birth:</h4>
+                    <p>@Model.DateOfBirth.ToShortDateString()</p>
 
-    <h4>Gender:</h4>
-    <p>@Model.Gender</p>
+                    <h4>Gender:</h4>
+                    <p>@Model.Gender</p>
 
-    <h4>Tax Category:</h4>
-    <p>@Model.TaxCategory</p>
-    @if (Model.TaxCategory == TaxCategory.MarriedTwoIncomes)
-    {
-        <h4>Partner Income:</h4>
-        <p>@Model.PartnerIncome</p>
-    }
+                    <h4>Tax Category:</h4>
+                    <p>@Model.TaxCategory</p>
+
+                    @if (Model.TaxCategory == TaxCategory.MarriedTwoIncomes)
+                    {
+                        <h4>Partner Income:</h4>
+                        <p>@Model.PartnerIncome</p>
+                    }
+                </div>
+            </div>
+
+            <div class="text-center">
+                <a asp-action="Salary" asp-route-userProfileId="@Model.UserProfileId" class="btn btn-primary">View Salary Breakdown</a>
+            </div>
+
+            <div class="text-center mt-3">
+                <a asp-action="Edit" asp-route-id="@Model.UserProfileId" class="btn btn-secondary">Edit</a>
+                <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">Back to Home</a>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="form-group">
-    <a asp-action="Salary" asp-route-userProfileId="@Model.UserProfileId" class="btn btn-primary">View Salary Breakdown</a>
-</div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.UserProfileId">Edit</a> |
-    <a asp-action="Index" asp-controller="Home">Back to Home</a>
-</div>
