--- a/ATUProject1/EmployeeManagementSystem/Views/Profile/Salary.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Profile/Salary.cshtml
@@ -71,7 +71,7 @@
 
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary">Save</button>
-                    <button type="button" class="btn btn-secondary" onclick="window.history.back();">Back</button>
+                    <a class="btn btn-secondary" asp-action="Details" asp-controller="Profile" asp-route-id="@Model.UserProfileId">Back</a>
                 </div>
             </form>
         </div>
