--- a/ATUProject1/EmployeeManagementSystem/Views/Shared/_LoginPartial.cshtml
+++ b/ATUProject1/EmployeeManagementSystem/Views/Shared/_LoginPartial.cshtml
@@ -7,16 +7,21 @@
 @if (SignInManager.IsSignedIn(User))
 {
     var userId = UserManager.GetUserId(User);
+    var isAdmin = User.IsInRole("Admin");
     var userProfile = DbContext.UserProfiles.FirstOrDefault(up => up.UserId == userId);
-<ul class="navbar-nav">
-    <li class="nav-item">
-        <span class="navbar-text">Welcome, @(userProfile?.FirstName)!</span>
-    </li>
-        <li class="nav-item">
-            <a class="nav-link" asp-controller="Profile" asp-action="Details" asp-route-id="@userId">
-                <img src="~/images/profile_icon.png" alt="Profile" width="25" height="25" />
-            </a>
-        </li>
+
+    <ul class="navbar-nav">
+        @if (!isAdmin)
+        {
+            <li class="nav-item">
+                <span class="navbar-text">Welcome, @(userProfile?.FirstName)!</span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Profile" asp-action="Details" asp-route-id="@userId">
+                    <img src="~/images/profile_icon.png" alt="Profile" width="25" height="25" />
+                </a>
+            </li>
+        }
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
